@@ -598,6 +598,20 @@ name|hadoop
 operator|.
 name|util
 operator|.
+name|ShutdownHookManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
 name|StringUtils
 import|;
 end_import
@@ -2145,6 +2159,18 @@ name|e
 argument_list|)
 expr_stmt|;
 comment|// umbilical:  MRAppMaster creates (taskAttemptListener), passes to us
+if|if
+condition|(
+operator|!
+name|ShutdownHookManager
+operator|.
+name|get
+argument_list|()
+operator|.
+name|isShutdownInProgress
+argument_list|()
+condition|)
+block|{
 name|umbilical
 operator|.
 name|fsError
@@ -2157,6 +2183,7 @@ name|getMessage
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 throw|throw
 operator|new
 name|RuntimeException
@@ -2264,6 +2291,18 @@ name|throwable
 argument_list|)
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|ShutdownHookManager
+operator|.
+name|get
+argument_list|()
+operator|.
+name|isShutdownInProgress
+argument_list|()
+condition|)
+block|{
 name|Throwable
 name|tCause
 init|=
@@ -2302,6 +2341,7 @@ argument_list|,
 name|cause
 argument_list|)
 expr_stmt|;
+block|}
 throw|throw
 operator|new
 name|RuntimeException
