@@ -528,6 +528,20 @@ name|hadoop
 operator|.
 name|util
 operator|.
+name|ShutdownHookManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
 name|StringUtils
 import|;
 end_import
@@ -1259,6 +1273,18 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|ShutdownHookManager
+operator|.
+name|get
+argument_list|()
+operator|.
+name|isShutdownInProgress
+argument_list|()
+condition|)
+block|{
 name|umbilical
 operator|.
 name|fsError
@@ -1271,6 +1297,7 @@ name|getMessage
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1392,6 +1419,18 @@ operator|!=
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+operator|!
+name|ShutdownHookManager
+operator|.
+name|get
+argument_list|()
+operator|.
+name|isShutdownInProgress
+argument_list|()
+condition|)
+block|{
 name|umbilical
 operator|.
 name|fatalError
@@ -1406,6 +1445,7 @@ name|exception
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 catch|catch
@@ -1433,6 +1473,18 @@ condition|(
 name|taskid
 operator|!=
 literal|null
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|ShutdownHookManager
+operator|.
+name|get
+argument_list|()
+operator|.
+name|isShutdownInProgress
+argument_list|()
 condition|)
 block|{
 name|Throwable
@@ -1471,6 +1523,7 @@ argument_list|,
 name|cause
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 finally|finally
