@@ -638,6 +638,20 @@ name|hadoop
 operator|.
 name|util
 operator|.
+name|ShutdownHookManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
 name|StringInterner
 import|;
 end_import
@@ -1568,6 +1582,19 @@ argument_list|(
 name|logMsg
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|ShutdownHookManager
+operator|.
+name|get
+argument_list|()
+operator|.
+name|isShutdownInProgress
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
 name|Throwable
 name|tCause
 init|=
